--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -10,7 +10,7 @@
             var listingTemplate =
             `
                     <a href='/discover/${listing['_id']}'>
-                        <div class='p-5 vertical'>
+                        <div class='p-5 vertical listing-card'>
                             <div class="box listing-img"
                                 style="background-image: url('data:image/jpeg;base64,${listing['tour_img']}') ;"></div>
                                 <div class="ml-4">
@@ -19,7 +19,7 @@
                                         <div class="ml-2"><b>HidethePain</b> is offering:</div>
                                     </div>
                                     <h1 class='title is-4'>${listing['tour_name']}</h1>
-                                    <p class="subtitle is-6">${listing['tour_brief']}</p>
+                                    <p class="subtitle is-6 listing-card-text">${listing['tour_brief']}</p>
                                     <p class="has-text-weight-light is-size-3 has-text-dark"><small
                                             class="is-size-5">From</small>
                                             $${listing['tour_price']}.0
